# docs/openapi/admin-service/admin-service.yaml
@@ -108,6 +108,35 @@ paths:
         "500":
           $ref: "../problems.yaml#/responses/InternalServerError"
 
+  /events-catalog/event-key-available:
+    get:
+      tags:
+        - Event Catalog
+      summary: Check if an event key is available
+      operationId: isEventKeyAvailableForExperiment
+      parameters:
+        - name: eventKey
+          in: query
+          required: true
+          schema:
+            type: string
+          example: "purchase_completed"
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  available:
+                    type: boolean
+              example:
+                available: true
+        "400":
+          $ref: "../problems.yaml#/responses/BadRequest"
+        "500":
+          $ref: "../problems.yaml#/responses/InternalServerError"
+
   /events-catalog/{eventTypeId}/field-key-available:
     get:
       tags:
