# services/admin-portal/src/api/eventsCatalog/model/eventsCatalog.ts
@@ -33,3 +33,7 @@ export type CreateEventTypeRequest = {
 export type FieldKeyAvailableResponse = {
   available: boolean;
 };
+
+export type EventKeyAvailableResponse = {
+  available: boolean;
+};
